--- a/frontend/src/components/VictimeListItem/styles.scss
+++ b/frontend/src/components/VictimeListItem/styles.scss
@@ -6,9 +6,11 @@
   td {
     margin: auto 0px;
     text-align: left;
+    font-size: 12px;
   }
   th {
     margin: auto 0px;
     text-align: left;
+    font-size: 12px;
   }
 }
