--- a/frontend/src/components/GenderSelector/styles.scss
+++ b/frontend/src/components/GenderSelector/styles.scss
@@ -20,8 +20,8 @@
   }
 
   &-active {
-    background: #ffffff;
-    color: #1c1c1c;
+    background: #0085ff;
+    color: #fff;
     /* Light/Drop Shadow/2 */
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.06),
       0px 1px 1px rgba(0, 0, 0, 0.08);
